--- a/about/index.html
+++ b/about/index.html
@@ -95,7 +95,29 @@ img {
     <h2>Matthew</h2>
     <hr>
     <img src="../images/racc.jpg" style="width: 25%; border-radius: 50%;">
+    <h3>20 - He/Him</h3>
     <h4>Hello, my name is Matthew. Making games is my freedom from pain and suffering and the external world.</h4>
+    <h4>Favorite games:</h4>
+    <img src="MattFavGames.jpeg" style="width: 100%;">
+    <h4>
+    <ul>
+        <li>Celeste</li>
+        <li>Burnout Paradise</li>
+        <li>Another Crab's Treasure</li>
+        <li>Night in the Woods</li>
+        <li>Portal 2</li>
+        <li>Katamari Damacy</li>
+        <li>Dream Daddy: A Dad Dating Simulator</li>
+        <li>Disco Elysium: The Final Cut</li>
+        <li>Super Mario Bros. 3</li>
+        <li>BeamNG. drive</li>
+        <li>Undertale</li>
+        <li>The Beginner's Guide</li>
+        <li>Getting Over It with Bennett Foddy</li>
+        <li>MyHouse. WAD</li>
+        <li>The Stanley Parable: Ultra Deluxe</li>
+    </ul>
+    </h4>
     <h2>Credits</h2>
     <hr>
     <h4>These are the games I've worked on with other people and what credits they have on the game.</h4>
